fixed stretch bug

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,8 @@ section {
   align-items: center;
   
 
-  width: 60vw;
-  height: 60vh;
+  width: 60vmin;
+  height: 60vmin;
   
   grid-template-rows: repeat(8, 1fr);
   grid-template-columns: repeat(8, 1fr);
